Create Home_Page Header
Not still finished

--- a/Home_page.html
+++ b/Home_page.html
@@ -1,1 +1,37 @@
+<!DOCTYPE html>
 
+<head>
+    <title>Green-World-Guide_Homepage</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" href="Home_Page.css">
+    <link href="https://fonts.googleapis.com/css?family=Nunito:400,600,700,800,900&display=swap" rel="stylesheet">
+    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+
+
+</head>
+
+<body>
+    <div class="header">
+        <div class="navbar">
+            <div class="logo">
+                <a href="#"><img src="imghome/logo.jpg"></a>
+            </div>
+            <div class="menu">
+                <ul>
+                    <li>Home</li>
+                    <li>Project</li>
+                    <li>Blog</li>
+                    <li>Analysis</li>
+                    <li>Donate</li>
+                    <li>About</li>
+                </ul>
+            </div>
+            <div class="login-btn">Login</div>
+        </div>
+
+     
+
+
+
+</body>
