--- a/About_Page.html
+++ b/About_Page.html
@@ -1,2 +1,22 @@
+<html>
 
+   <head>
+     <style>
+	body {
+ 	background-image: url('7.jpg');
+ 	background-repeat: no-repeat;
+  	background-attachment: fixed; 
+  	background-size: 100% 100%;
+	}
+	h1 {text-align: center;}
+     </style>
 
+   </head>
+
+    <body>
+
+	 <h1 style="font-size:60px;">About</h1>
+		
+    </body>
+
+</html>
