--- a/Home_page.html
+++ b/Home_page.html
@@ -29,6 +29,38 @@
             </div>
             <div class="login-btn">Login</div>
         </div>
+        <div class="banner">
+            <div class="app-text">
+                <h3>For a sustainable future</h3>
+                <h1>We Guide To<br>Green World</h1>
+                <p>We all have the power to regreen the world.When you contribute to Green World Guide organization, you are doing more than just planting trees. And many more.</p>
+
+                <div class="btn-group">
+                    <div class="signup-btn">Sign Up Now</div>
+                    <div class="play-btn">
+                        <div class="play-btn-inner">
+                            <i class="fa fa-play"></i>
+                        </div>
+                        <span>How it works</span>
+                    </div> 
+                </div>
+
+            </div>
+
+            <div class="app-picture">
+                <img src="imghome/banner.jpg">
+            </div>
+
+        </div>
+
+        <div class="social-icons">
+            <ul>
+               <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+               <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+               <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+               <li><a href="#"><i class="fa fa-instagram"></i></a></li>
+            </ul>
+        </div>
 
      
 
