--- a/About_Page.html
+++ b/About_Page.html
@@ -34,7 +34,7 @@
 		}
 
 		body {
-	 	background-image: url('7.jpg');
+	 	background-image: url('imghome/7.jpg');
 	 	background-repeat: no-repeat;
 	  	background-attachment: fixed; 
 	  	background-size: 100% 100%;
