--- a/About_Page.html
+++ b/About_Page.html
@@ -82,6 +82,24 @@
 
 
 
+body {
+  background-image: url('b.jpg');
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size:1800px 300px;
+
+
+}
+
+div.main {
+
+  top: 180px;
+  right: 400px	;
+  width: 200px;
+  height: 100px;
+
+
+}
 
 
 
