--- a/Donate_Page.html
+++ b/Donate_Page.html
@@ -22,16 +22,16 @@
                 <!--radio buttons end-->
                 <!--slide images start-->
                 <div class="slide first">
-                  <img src="/clay-banks-w_qTfiPbjbg-unsplash.jpg" alt="">
+                  <img src="/assets/image/donate1.jpg" alt="">
                 </div>
                 <div class="slide">
-                  <img src="/filip-zrnzevic-QsWG0kjPQRY-unsplash.jpg" alt="">
+                  <img src="/assets/image/donate2.jpg" alt="">
                 </div>
                 <div class="slide">
-                  <img src="/joel-muniz-XqXJJhK-c08-unsplash.jpg" alt="">
+                  <img src="/assets/image/donate3.jpg" alt="">
                 </div>
                 <div class="slide">
-                  <img src="/thought-catalog-o0Qqw21-0NI-unsplash.jpg" alt="">
+                  <img src="/assets/image/donate4.jpg" alt="">
                 </div>
                 <!--slide images end-->
                 
